# qoder-patchs

./: .gitignore  LICENSE  README.md  config.template.toml  config.toml  main.py  pyproject.toml
docs-src/: INDEX.md
docs-src/cli/: theme.md
docs-src/core/: ARCHITECTURE.md
docs-src/patches/: guide.md
src/qoder_patchs/: __init__.py  __main__.py
src/qoder_patchs/cli/: __init__.py  app.py  charmap.py  menu.py  theme.py  ui.py
src/qoder_patchs/core/: __init__.py  config.py  engine.py  patch_base.py  registry.py
src/qoder_patchs/patches/: __init__.py  _templates.py  win10_warning.py
src/qoder_patchs/utils/: __init__.py  backup.py  logging.py  paths.py  platform.py
test/: conftest.py
test/cli/: __init__.py  test_app.py  test_charmap.py  test_theme.py
test/core/: __init__.py  test_config.py  test_engine.py  test_patch_base.py  test_registry.py
test/patches/: __init__.py  test_win10_warning.py
test/utils/: __init__.py  test_backup.py  test_paths.py
