[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qoder-patchs"
version = "2.0.0"
description = "Qoder CLI 补丁管理工具 -- 交互式菜单, 可扩展补丁系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "nichengfuben" },
]
keywords = ["cli", "patch", "qoder", "windows", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
    "tomli-w>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
qoder-patchs = "qoder_patchs.cli.app:typer_app"
qp = "qoder_patchs.cli.app:typer_app"

[project.entry-points."qoder_patchs.patches"]
win10-warning = "qoder_patchs.patches.win10_warning:Win10WarningPatch"

[tool.hatch.build.targets.wheel]
packages = ["src/qoder_patchs"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
